# data-pipeline-project

./: .coverage  .gitignore  Pipfile  README.md  __init__.py  __main__.py  kafkatest.py  pyproject.toml  requirements.txt  temp.txt
data-crawl/: __main__.py  basecrawler.py  charactercrawler.py  historycrawler.py
data_crawl/: basecrawler.py  charactercrawler.py  historycrawler.py
data_generator/: README.md  __main__.py  characterdata.jl  eventgenerator.py
data_storage/: minioconnector.py
htmlcov/: __init___py.html  data_crawl___init___py.html  data_crawl___main___py.html  data_crawl_basecrawler_py.html  data_crawl_charactercrawler_py.html  data_crawl_historycrawler_py.html  index.html  kafkatest_py.html  status.json
tests/: conftest.py  test_basecrawler.py  test_charactercrawler.py  test_data_crawl.py
